# Kinect_Fusion

./: .gitignore  CMakeLists.txt  README.md  main.cpp  main.cu
include/: Eigen.h  Frame.cuh  Frame.h  FreeImageHelper.h  ICP.cuh  ICP.h  ICPOptimizer.h  MarchingCubes.cuh  NearestNeighbour.h  ProcrustesAligner.h  Ray.cuh  Ray.h  RayCaster.cuh  SimpleMesh.cuh  SimpleMesh.h  VirtualSensor.cuh  VirtualSensor.h  Volume.cuh  Volume.h
src/cuda/: Frame.cu  Frame.h  Volume.cu  Volume.h  cudaMath.h
src/cuda_boost/: integrate.cu  raycast.cu  volume.cu
src/helpers/: FreeImageHelper.cpp
src/icp/: CeresICPOptimizer.cpp  ICP.cpp  ICP.cu  ICPOptimizer.cpp  LinearICPOptimizer.cpp
src/models/: Frame.cpp  Frame.cu  Volume.cpp  Volume.cu
src/raycaster/: Ray.cpp  Ray.cu  RayCaster.cpp  RayCaster.cu
